--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Akhilesh | Graphic Designer</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/mywork/style.css">
 		<link rel="shortcut icon" type="image/x-icon" href="akhil_iconn.ico">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		
@@ -17,8 +17,8 @@
 		<header>
 			<div class="container-fluid" id="headerDiv">
 				<nav class="navbar navbar-expand-lg ">
-					<a class="navbar-brand"href="index.html" href="index.html">
-						<img src="logo.png" alt="logo">
+					<a class="navbar-brand"href="index.html" href="/mywork/index.html">
+						<img src="/mywork/logo.png" alt="logo">
 					</a>
 					<!-- <p class="Name">Akhilesh<span>👨🏼&zwj;💼</span></p> -->
 					<div class="Name">
@@ -52,7 +52,7 @@
 				</nav>
 			</div>
 			<div class="banner-img">
-				<img src="bannerphoto.png">
+				<img src="/mywork/bannerphoto.png">
 			</div>
 			<div class="block-content">
 				<h1>Akhilesh | Portfolio.</h1>
