--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Akhilesh | Graphic Designer</title>
 		<link rel="stylesheet" type="text/css" href="/mywork/style.css">
-		<link rel="shortcut icon" type="image/x-icon" href="akhil_iconn.ico">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="shortcut icon" type="image/x-icon" href="/mywork/akhil_iconn.ico">
+		<link rel="stylesheet" type="text/css" href="/mywork/css/bootstrap.min.css">
 		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<link rel="stylesheet"  href="font-awesome.min.css">
+		<link rel="stylesheet"  href="/mywork/font-awesome.min.css">
 		<!-- font awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 	</head>
